--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ img {
     font-size: 12px;
 
   }
+  /* Lezioni */
   .row {
     width: 100vw;
     margin-top: 0;
@@ -93,12 +94,13 @@ img {
   #lezioni .row>.left,
   #lezioni .row>.right {
     width: 98%;
-    margin: 0 auto;
+    margin: 5px auto;
   }
   img {
     height: 100px;
   }
 
+  /* steps */
   .container.grey {
     background-color: white;
   }
@@ -108,6 +110,20 @@ img {
     float: none;
     width: 98%;
     margin: 0 auto;
+  }
+
+  /* Why */
+  #why {
+    background-color: #f2f2cd;
+    margin-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  #why .row>.first,
+  #why .row>.second,
+  #why .row>.third {
+    width: 100%;
+    margin-top: 10px;
   }
 
 
